# rag-finance-agent

./: .gitignore  LICENSE  README.md  finance.csv  pyproject.toml
app/: main.py
app/api/: dependencies.py  routers.py  routes.py
app/services/: embedding.py  ingestion.py  llm.py  metrics.py  retrieval.py
app/services/core/: llm.py  retrieval.py
app/services/metrics/: metrics.py
app/services/optimize/: judge_llm.py  rate_limiter.py
app/services/persistance/: embedding.py
app/utils/: __init__.py  cost.py
client/: fake_embedding_client.py  fake_services.py
data/: chunks.json  chunks.py  index.faiss
evals/: dataset.json  results.json  run_eval.py
tests/: test_embeddings.py  test_ingestion.py  test_retrieval.py
